<resources>
    <string name="app_name">pemainankodedanhuruf</string>
    <string name="si_biner">SI BINER</string>
    <string name="simulasi_dan_gamifikasi_pembelajaran_ilmu_komputer_dasar">Simulasi dan gamifikasi pembelajaran ilmu komputer dasar</string>
    <string name="mulai">Mulai</string>
    <string name="beranda">Beranda</string>
    <string name="keluar">Keluar</string>
    <string name="pengkodean_angka">Pengkodean Angka</string>
    <string name="pengkodean_huruf">Pengkodean Huruf</string>
    <string name="angka_rahasia">Angka Rahasia</string>
    <string name="membaca_pikiran">Membaca Pikiran</string>
    <string name="pengkodean_gambar">Pengkodean Gambar</string>
    <string name="si_biner_pengkodean_angka">SI BINER:Pengkodean Angka</string>
    <string name="simulasi">Simulasi</string>
    <string name="game">Game</string>
    <string name="dibalik_ilmu_komputer">Dibalik Ilmu Komputer</string>
</resources>