<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/warna_background"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuutama">
        <TextView
            android:layout_width="match_parent"
            android:textSize="14pt"
            android:textColor="@color/warna_text"
            android:text="@string/si_biner"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:text="@string/beranda"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="match_parent"
            android:text="@string/keluar"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>